forge/tests/error/fun-param-shadows-sig.frg
#lang forge
option run_sterling off

sig Person {}
sig Animal {}

-- Parameter 'Person' shadows sig 'Person'
fun shadowsSig[Person: Animal]: one Animal { Person }
